// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`load env 1`] = `
{
  "appid": "wxdd3948dc1c7f95c2",
  "configPath": "./miniConfigList",
  "desc": "版本描述可选 .env",
  "name": "若川视野-小程序1-env",
  "packageJsonPath": "../../../tdesign-miniprogram-starter-retail/package.json",
  "privateKeyPath": "./key/private.wxdd3948dc1c7f95c2.key",
  "projectPath": "../../../tdesign-miniprogram-starter-retail",
  "version": "1.0.0",
}
`;

exports[`load env development 1`] = `
{
  "appid": "wxdd3948dc1c7f95c2",
  "configPath": "./miniConfigList",
  "desc": "版本描述可选 .env",
  "name": "若川视野-小程序1-env-development",
  "packageJsonPath": "../../../tdesign-miniprogram-starter-retail/package.json",
  "privateKeyPath": "./key/private.wxdd3948dc1c7f95c2.key",
  "projectPath": "../../../tdesign-miniprogram-starter-retail",
  "version": "1.0.0",
}
`;

exports[`load env production 1`] = `
{
  "appid": "wxdd3948dc1c7f95c2",
  "configPath": "./miniConfigList",
  "desc": "版本描述可选 .env",
  "name": "若川视野-小程序1-env-production",
  "packageJsonPath": "../../../tdesign-miniprogram-starter-retail/package.json",
  "privateKeyPath": "./key/private.wxdd3948dc1c7f95c2.key",
  "projectPath": "../../../tdesign-miniprogram-starter-retail",
  "version": "1.0.0",
}
`;

exports[`load env test 1`] = `
{
  "appid": "wxdd3948dc1c7f95c2",
  "configPath": "./miniConfigList",
  "desc": "版本描述可选 .env",
  "name": "若川视野-小程序1-env-test",
  "packageJsonPath": "../../../tdesign-miniprogram-starter-retail/package.json",
  "privateKeyPath": "./key/private.wxdd3948dc1c7f95c2.key",
  "projectPath": "../../../tdesign-miniprogram-starter-retail",
  "version": "1.0.0",
}
`;
